docs/v4.4.2/_sources/genrst/syntax.rst.txt
.. This document was generated by tools/gen-cpydiff.py

Syntax
======
Generated Tue 11 Jul 2023 01:10:34 UTC

.. _cpydiff_syntax_arg_unpacking:

Argument unpacking does not work if the argument being unpacked is the nth or greater argument where n is the number of bits in an MP_SMALL_INT.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

**Cause:** The implementation uses an MP_SMALL_INT to flag args that need to be unpacked.

**Workaround:** Use fewer arguments.

Sample code::

    
    
    def example(*args):
        print(len(args))
    
    
    MORE = ["a", "b", "c"]
    
    example(
        0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
        16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31,
        32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47,
        48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63,
        *MORE,
    )
    

+-------------+------------------------------------------------------+
| CPy output: | uPy output:                                          |
+-------------+------------------------------------------------------+
| ::          | ::                                                   |
|             |                                                      |
|     67      |     /bin/sh: 1: ../ports/unix/micropython: not found |
+-------------+------------------------------------------------------+

Operators
---------

.. _cpydiff_syntax_assign_expr:

MicroPython allows using := to assign to the variable of a comprehension, CPython raises a SyntaxError.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

**Cause:** MicroPython is optimised for code size and doesn't check this case.

**Workaround:** Do not rely on this behaviour if writing CPython compatible code.

Sample code::

    print([i := -1 for i in range(4)])

+-------------------------------------------------------------------------------------------+------------------------------------------------------+
| CPy output:                                                                               | uPy output:                                          |
+-------------------------------------------------------------------------------------------+------------------------------------------------------+
| ::                                                                                        | ::                                                   |
|                                                                                           |                                                      |
|       File "<stdin>", line 7                                                              |     /bin/sh: 1: ../ports/unix/micropython: not found |
|     SyntaxError: assignment expression cannot rebind comprehension iteration variable 'i' |                                                      |
+-------------------------------------------------------------------------------------------+------------------------------------------------------+

Spaces
------

.. _cpydiff_syntax_spaces:

uPy requires spaces between literal numbers and keywords, CPy doesn't
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Sample code::

    try:
        print(eval("1and 0"))
    except SyntaxError:
        print("Should have worked")
    try:
        print(eval("1or 0"))
    except SyntaxError:
        print("Should have worked")
    try:
        print(eval("1if 1else 0"))
    except SyntaxError:
        print("Should have worked")

+-------------+------------------------------------------------------+
| CPy output: | uPy output:                                          |
+-------------+------------------------------------------------------+
| ::          | ::                                                   |
|             |                                                      |
|     0       |     /bin/sh: 1: ../ports/unix/micropython: not found |
|     1       |                                                      |
|     1       |                                                      |
+-------------+------------------------------------------------------+

Unicode
-------

.. _cpydiff_syntax_unicode_nameesc:

Unicode name escapes are not implemented
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Sample code::

    print("\N{LATIN SMALL LETTER A}")

+-------------+------------------------------------------------------+
| CPy output: | uPy output:                                          |
+-------------+------------------------------------------------------+
| ::          | ::                                                   |
|             |                                                      |
|     a       |     /bin/sh: 1: ../ports/unix/micropython: not found |
+-------------+------------------------------------------------------+

